src/test/asg1/errors/capital-error.j
class Main {

Void main(){
    Int x; Int y; Int z;
    Y = x;
    y = x;
    z = x+ y;
}

}
