src/test/asg1/errors/capital-error.out
Syntax error "="( line 5 col 6 - line 5 col 7 ) :
5 |     Y = x;
  |       ^
instead expected token classes are []
Parse aborted due to above error.
